# nexus-framework-client

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  Jenkinsfile  LICENSE  README.md  README.pt-BR.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.omo/drafts/: android-remove-djinni-cmake.md  cppm-conversion.md  readme-docs-restructure.md  restructure-todos-and-docs.md  zig-integration-diagrams.md
.omo/evidence/: task-1-cppm-conversion.md  task-2-cppm-conversion.md
.omo/plans/: android-remove-djinni-cmake.md  cppm-conversion.md  readme-docs-restructure.md  restructure-todos-and-docs.md  zig-integration-diagrams.md
.omo/run-continuation/: ses_0a1f55e10ffeOzuHgYiicSjyrF.json  ses_0a1f56d39ffeyu3qiD82Ky3E1c.json  ses_0a1f56fcaffeuDlbCzfYkgRf1s.json  (+27 more)
app/: build.gradle.kts
builds/: LAYOUT.md  README.md  README.txt
client-setup/: README.md
docs/: README.md  hub.md
gradle/: libs.versions.toml
jenkins/: README.md
misc/: README.md  ROADMAP.md  build_client.sh
template/: README.md
template/android-app/: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  blueprint.json  build.gradle.kts  build_app.sh  local.properties.template  nxs_config.json  requirements.txt  settings.gradle.kts
template/android-app/app/: build.gradle.kts
template/android-app/app/src/main/: AndroidManifest.xml
template/android-app/app/src/main/java/com/nexus/plotter/: AssetExtractor.kt  ChaquopyPythonBridge.kt  EvalResult.kt  FlowRunner.kt  MainActivity.kt  NexusApplication.kt  PlotterCore.kt  PythonBridge.kt
template/android-app/app/src/main/java/com/nexus/{{packageName}}/: AppCore.kt  AssetExtractor.kt  ChaquopyPythonBridge.kt  EvalResult.kt  FlowRunner.kt  MainActivity.kt  NexusApplication.kt  PythonBridge.kt
template/android-app/app/src/main/python/: helpers.py
template/android-app/app/src/main/res/drawable/: ic_launcher_foreground.xml
template/android-app/app/src/main/res/values/: themes.xml
template/android-app/builds/: README.md
template/android-app/djinni/: app.djinni  plotter.djinni
template/android-app/djinni-generated/: README.md
template/android-app/djinni-generated/cpp/: app_core.hpp  eval_result.hpp  plotter_core.hpp  python_bridge.hpp
template/android-app/djinni-generated/java/com/nexus/plotter/: EvalResult.java  PlotterCore.java  PythonBridge.java
template/android-app/djinni-generated/jni/: NativePythonBridge.cpp  NativePythonBridge.hpp
template/android-app/djinni-generated/kotlin/com/nexus/plotter/: EvalResult.kt  PlotterCore.kt  PythonBridge.kt
template/android-app/djinni-generated/kotlin/com/nexus/{{packageName}}/: AppCore.kt  EvalResult.kt  PythonBridge.kt
template/android-app/examples/plotter/app/src/main/python/: functions.py
template/android-app/examples/plotter/flows/: flows.json
template/android-app/examples/plotter/scripts/: panels.lua
template/android-app/examples/plotter/src/controller/: PlotController.hpp
template/android-app/examples/plotter/src/model/: FunctionRegistry.cpp
template/android-app/examples/plotter/src/view/: PlotterView.cpp
template/android-app/flows/: flows.json
template/android-app/scripts/: panels.lua  regen-djinni.sh
template/android-app/src/: main.cpp
template/android-app/src/controller/: AppController.cpp  AppController.cppm  AppController.hpp  PlotController.cpp  PythonEngine.cpp  PythonEngine.cppm  PythonEngine.hpp
template/android-app/src/model/: AppModel.cpp  AppModel.cppm
template/android-app/src/service/: FlowRunner.cpp  FlowRunner.cppm  FlowRunner.hpp
template/android-app/src/view/: AppView.cpp  AppView.cppm  LuaPanels.cpp  LuaPanels.cppm  LuaPanels.hpp
template/android-app/ui/: ui.ts  ui.xhtml
template/android-app/zig-services/: BUILD.md  README.md  build.zig  build.zig.zon
template/android-app/zig-services/c_abi/: zig_allocator.h
template/android-app/zig-services/jni/: NativePythonBridge.cpp  NativePythonBridge.hpp  README.md  app_core.cpp  app_core.hpp  eval_result.hpp  jni_bridge.cpp  lua_bridge.zig  python_bridge.hpp  python_bridge.zig
template/android-app/zig-services/src/: memory.zig  nexus_exports.zig  root.zig
template/desktop-app/: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  DEVELOPER.md  NEXUS-BRIDGE.md  README.md  blueprint.json  build_app.sh  nxs_config.json
template/desktop-app/builds/: README.md
template/desktop-app/examples/plotter/: README.md
template/desktop-app/examples/plotter/src/: main.cpp
template/desktop-app/examples/plotter/src/controller/: PlotController.cpp  PythonEngine.cpp  PythonEngine.hpp
template/desktop-app/examples/plotter/src/service/: FlowRunner.cpp  FlowRunner.hpp
template/desktop-app/examples/plotter/src/view/: LuaPanels.cpp  LuaPanels.hpp  PlotterView.hpp
template/desktop-app/examples/plotter/ui/: ui.ts
template/desktop-app/flows/: flows.json
template/desktop-app/python/: functions.py  helpers.py  test_functions.py
template/desktop-app/scripts/: panels.lua
template/desktop-app/src/: main.cpp
template/desktop-app/src/bridge/: NexusBridge.cppm  bridge_c_api.h
template/desktop-app/src/controller/: AppController.cpp  AppController.cppm  AppController.hpp  PlotController.cppm  PythonEngine.cpp  PythonEngine.cppm  PythonEngine.hpp
template/desktop-app/src/model/: AppModel.cppm  AppModel.hpp  FunctionRegistry.cppm
template/desktop-app/src/service/: FlowRunner.cpp  FlowRunner.cppm  FlowRunner.hpp
template/desktop-app/src/view/: AppView.cpp  AppView.cppm  AppView.hpp  LuaPanels.cpp  LuaPanels.cppm  LuaPanels.hpp
template/desktop-app/src/view/controller/: PlotController.hpp  PythonEngine.hpp
template/desktop-app/src/view/model/: AppModel.hpp  FunctionRegistry.cpp  FunctionRegistry.hpp
template/desktop-app/ui/: ui.xhtml
template/desktop-app/zig-services/: BUILD.md  README.md  build.zig  build.zig.zon
template/desktop-app/zig-services/.zig-cache/c/10cb06c3b34b4be1c702894d2a4db63d/: options.zig
template/desktop-app/zig-services/examples/: smoke_test.cpp
template/desktop-app/zig-services/src/jni/: lua_bridge.zig  python_bridge.zig
(+295 files in other folders)
